# locus-test-apps

./: README.md
backend/: .dockerignore  README.md
backend/src/: index.ts
go-fullstack/backend/: .dockerignore  .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  go.mod  go.sum  main.go
go-fullstack/backend/cache/: redis.go
go-fullstack/backend/database/: database.go
go-fullstack/frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
go-fullstack/frontend/src/: App.vue  (+1 more)
python-fullstack/backend/: .dockerignore  .env.example  Dockerfile  README.md  database.py  main.py  models.py  redis_client.py  requirements.txt
python-fullstack/frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json
rust-backend/backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  dev.sh  docker-compose.yml  test-api.sh
rust-backend/backend/src/: cache.rs  db.rs  error.rs  main.rs
rust-backend/backend/src/handlers/: health.rs  mod.rs  stats.rs  todos.rs
rust-backend/backend/src/models/: mod.rs  todo.rs
rust-backend/frontend/: .dockerignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.example.yml  index.html  nginx.conf  start-dev.sh
typescript-fullstack/backend/: Dockerfile  package-lock.json  package.json
typescript-fullstack/frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
(+27 files in other folders)
